# ghost-ai-rs

./: .gitignore  Cargo.toml  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  USAGE.md  plan.md  plan_v2.md  plan_v3.md
.github/: copilot-instructions.md
.github/workflows/: build_release.yml
docker/: Dockerfile
src/: app.rs  audio.rs  capture.rs  config.rs  hotkeys.rs  lib.rs  logging.rs  main.rs  openai.rs  session.rs
tests/: basic.rs
