[package]
name = "ghost-ai"
version = "0.1.0"
edition = "2021"
authors = ["Ghost AI Maintainers"]
description = "Ghost AI - Invisible AI-powered desktop assistant rewritten in Rust"
readme = "README.md"
homepage = "https://github.com/Mai0313/ghost-ai"
license = "MIT"
repository = "https://github.com/Mai0313/ghost-ai"

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
directories = "5"
eframe = { version = "0.28", default-features = false, features = ["glow"] }
egui_extras = { version = "0.28", default-features = false, features = ["image"] }
env_logger = "0.11"
futures = "0.3"
hound = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
rand = "0.8"
rdev = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
screenshots = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-stream = "0.1"
tokio-util = "0.7"
pulldown-cmark = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = "3.6"

[features]
default = ["native"]
native = []

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
